--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,164 @@
-streamlit==1.23.1
+altair==5.0.1
+anaconda-client==1.11.0
+anaconda-navigator==2.4.0
+aniso8601==9.0.1
+backports.zoneinfo==0.2.1
+blinker==1.6.3
+brotlipy==0.7.0
+cachetools==5.3.3
+click==8.1.3
+clyent==1.2.2
+conda==23.1.0
+conda-repo-cli==1.0.27
+cycler==0.11.0
+datatable==1.0.0
+feature-engine==1.4.0
+filelock==3.12.2
+Flask==2.2.3
+Flask-RESTful==0.3.9
+fonttools==4.38.0
+fsspec==2023.1.0
+fuzzywuzzy==0.18.0
+gitdb==4.0.11
+GitPython==3.1.43
+huggingface-hub==0.15.1
+itsdangerous==2.1.2
+joblib==1.2.0
+jupyter-contrib-core==0.4.2
+jupyter-nbextensions-configurator==0.6.3
+keras==2.11.0
+kiwisolver==1.4.4
+Levenshtein==0.21.1
+markdown-it-py==2.2.0
+matplotlib==3.5.3
+mdurl==0.1.2
+navigator-updater==0.3.0
+nltk==3.8.1
+numpy==1.21.6
+nzpy==1.15
 pandas==1.3.5
-numpy
+patsy==0.5.6
+Pillow==9.4.0
+ply==3.11
+protobuf==4.22.1
+pyarrow==12.0.1
+pydeck==0.8.1b0
+Pygments==2.17.2
+Pympler==1.0.1
+pyotp==2.8.0
+pyparsing==3.0.9
+PyQt5==5.15.7
+python-Levenshtein==0.21.1
+pytz-deprecation-shim==0.1.0.post0
+pywin32==305.1
+PyYAML==6.0
+rapidfuzz==3.1.1
+regex==2023.6.3
+rich==13.7.1
+safetensors==0.3.1
 scikit-learn==1.0.2
+scipy==1.7.3
+scramp==1.1.0
+seaborn==0.12.2
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+smartapi-python==1.3.0
+smmap==5.0.1
+statsmodels==0.13.5
+streamlit==1.23.1
+tenacity==8.2.3
+threadpoolctl==3.1.0
+tokenizers==0.13.3
+torch==1.13.1
+torchvision==0.14.1
+transformers==4.30.2
+tzdata==2024.1
+tzlocal==4.3.1
+validators==0.20.0
+watchdog==3.0.0
+webencodings==0.5.1
+Werkzeug==2.2.3
+wincertstore==0.2
+zstandard==0.19.0
+altair==5.0.1
+anaconda-client==1.11.0
+anaconda-navigator==2.4.0
+aniso8601==9.0.1
+backports.zoneinfo==0.2.1
+blinker==1.6.3
+brotlipy==0.7.0
+cachetools==5.3.3
+click==8.1.3
+clyent==1.2.2
+conda==23.1.0
+conda-repo-cli==1.0.27
+cycler==0.11.0
+datatable==1.0.0
+feature-engine==1.4.0
+filelock==3.12.2
+Flask==2.2.3
+Flask-RESTful==0.3.9
+fonttools==4.38.0
+fsspec==2023.1.0
+fuzzywuzzy==0.18.0
+gitdb==4.0.11
+GitPython==3.1.43
+huggingface-hub==0.15.1
+itsdangerous==2.1.2
+joblib==1.2.0
+jupyter-contrib-core==0.4.2
+jupyter-nbextensions-configurator==0.6.3
+keras==2.11.0
+kiwisolver==1.4.4
+Levenshtein==0.21.1
+markdown-it-py==2.2.0
+matplotlib==3.5.3
+mdurl==0.1.2
+navigator-updater==0.3.0
+nltk==3.8.1
+numpy==1.21.6
+nzpy==1.15
+pandas==1.3.5
+patsy==0.5.6
+Pillow==9.4.0
+ply==3.11
+protobuf==4.22.1
+pyarrow==12.0.1
+pydeck==0.8.1b0
+Pygments==2.17.2
+Pympler==1.0.1
+pyotp==2.8.0
+pyparsing==3.0.9
+PyQt5==5.15.7
+python-Levenshtein==0.21.1
+pytz-deprecation-shim==0.1.0.post0
+pywin32==305.1
+PyYAML==6.0
+rapidfuzz==3.1.1
+regex==2023.6.3
+rich==13.7.1
+safetensors==0.3.1
+scikit-learn==1.0.2
+scipy==1.7.3
+scramp==1.1.0
+seaborn==0.12.2
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+smartapi-python==1.3.0
+smmap==5.0.1
+statsmodels==0.13.5
+streamlit==1.23.1
+tenacity==8.2.3
+threadpoolctl==3.1.0
+tokenizers==0.13.3
+torch==1.13.1
+torchvision==0.14.1
+transformers==4.30.2
+tzdata==2024.1
+tzlocal==4.3.1
+validators==0.20.0
+watchdog==3.0.0
+webencodings==0.5.1
+Werkzeug==2.2.3
+wincertstore==0.2
+zstandard==0.19.0
